# High-performance-compute-project

./: CMakeLists.txt  Smooth.cpp
data/: gf.ppm  plant2.ppm  plant_sd.ppm  plt5.ppm  singleKernelANDreverReduceOpts.txt  singleKernelOpt.txt
matlab/: eddie_graythresh.m  entro.m  shadow.m  shadow3.m
pbs/: run_shadow_removal.pbs  run_shadow_removal.sh
src/: Erosion.cpp  Greyscale.cpp  MaskGeneration.cpp  RGBtoYUV.cpp  Smooth.cpp  colorInvariant.cpp  main.cu  map1Proc5.cpp  map2Proc5.cpp  proc5.cpp  run_shadow_removalTest.pbs  sumProc5.cpp
test/: build.sh  catch-tests-colorInvariant.cpp  catch-tests-erosion.cpp  catch-tests-greyscale.cpp  test-runner.pbs
test/data/: Erosion_DarkOutput.ppm  Erosion_GrayMask.ppm  Erosion_LightOutput.ppm
